# math_lib

./: Cargo.toml  README  README.md  make_array_from_table.sed  merge_lib_targets.sh  my_header.h
benches/: lib_bench.rs
src/: bin.rs
src/lib/: equation.rs  lib.rs  math.rs  matrix.rs  tokeniser.rs  vector.rs
src/tui/: bin.rs
