[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
[lib]
name = "math_library"
path = "src/lib/lib.rs"
crate_type = ["lib", "staticlib"]
[[bin]]
name = "math_binary"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "lib_bench"
harness = false

[build-dependencies]
bindgen = "0.64.0"
