[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"
fraction = "0.13"
crossterm = "0.26.1"
colored = "2.0.0"

[lib]
name = "math_library"
path = "src/lib/lib.rs"
crate_type = ["lib", "staticlib"]
[[bin]]
name = "math_binary"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "lib_bench"
harness = false
