[package]
name = "math_lib"
version = "0.1.0"
edition = "2021"
default-run = "tui_math"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"
fraction = "0.13"
yew = { version = "0.20.0", features = ["csr"] }
# tui = "0.19.0"
# crossterm = "0.26.1"
# colored = "2.0.0"
# time = { version = "0.3.22", features = ["local-offset"] }
# reqwest = "0.11.18"


[lib]
name = "math_library"
path = "src/lib/lib.rs"
crate_type = ["lib", "staticlib"]

[[bin]]
name = "tui_math"
path = "src/tui/bin.rs"
[[bin]]
name = "gui_math"
path = "src/gui/bin.rs"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "lib_bench"
harness = false
